# game_of_life

./: README.md  pyproject.toml
game_of_life/: arguments.py  board.py  cell.py  cell_init.py  game.py  game_object.py  logging.py  main.py  read_write.py  state.py
game_of_life/patterns/: 0-beehive.txt  15-pentadecathlon.txt  3-pulsar.txt  output.txt
tests/: test_oscillators.py  test_static.py
